[build-system]
# requires = ["setuptools >= 40.6.0", "wheel"]
requires = ["hatchling", "wheel"]

# build-backend = "setuptools.build_meta"
build-backend = "hatchling.build"

[project]
name="sqlgrep"
dynamic = [ "version" ]

dependencies = [
    'sqlalchemy',
    'rich',
]
authors = [
  { name="Yaroslav Polyakov", email="yaroslaff@gmail.com" },
]
description = "Simple OpenSSL for humans: fetch/validate/show/save SSL certificates and warn about soon expiration"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yaroslaff/sqlgrep"
Issues = "https://github.com/yaroslaff/sqlgrep/issues"


[project.scripts]
sqlgrep = "sqlgrep:main"

[project.optional-dependencies]
mysql = [
    'mysqlclient'
]
postgresql = [
  'psycopg2'  
]


[tool.hatch.version]
path = 'sqlgrep/__init__.py'
